src/Pages/Homepage/Homepage.css
.bannerMod {
  background-image: url("../../Images/bannerbg.svg");
  background-position: center;
  text-align: center;
}

.Rocket {
  max-width: 70vw;
}

.Stewardess,
.Rover {
  margin: 0 1vh;
  padding-bottom: 1vh;
}

.Rentarover,
.Accomodation {
  margin: 1vw 1vw 1vw 0;
  border-radius: 0.5vw;
}

